--- a/bond-ladder.html
+++ b/bond-ladder.html
@@ -940,7 +940,7 @@
 
     <script>
         // === GitHub 同步整合 ===
-const DATA_FILENAME = 'bond-compare-data.json';
+const DATA_FILENAME = 'bond-ladder.json';
 
 // 頁面載入時自動從 GitHub 載入數據
 window.addEventListener('DOMContentLoaded', async () => {
