--- a/bond-ladder.html
+++ b/bond-ladder.html
@@ -813,7 +813,7 @@
         📥 從 GitHub 載入
     </button>
 </div>
-
+ </div> 
         <!-- 投資組合統計 (移到上面) -->
         <div class="card">
             <div class="card-header">
@@ -943,7 +943,6 @@
     <div class="toast" id="toast"></div>
     <div class="tooltip" id="tooltip" style="display: none;"></div>
 
-    <script>
 <script>
     // ==================== GitHub 同步設定 ====================
     const DATA_FILENAME = 'bond-ladder-data.json';
