--- a/guide.html
+++ b/guide.html
@@ -165,6 +165,15 @@
         </header>
 
         <div class="tools-grid">
+
+            <a href="buyinschedule.html" class="tool-card">
+                <div class="tool-icon">📅</div>
+                <div class="tool-info">
+                <h3>買入時間表</h3>
+                <p>管理定期買入排程和股息公佈日期追蹤</p>
+                </div>
+            </a>
+            
             <a href="bond-compare.html" class="tool-card">
                 <div class="tool-icon">⚖️</div>
                 <div class="tool-title">債券成本對比小程式</div>
