--- a/guide.html
+++ b/guide.html
@@ -168,10 +168,8 @@
 
             <a href="buyinschedule.html" class="tool-card">
                 <div class="tool-icon">📅</div>
-                <div class="tool-info">
-                <h3>買入時間表</h3>
-                <p>管理定期買入排程和股息公佈日期追蹤</p>
-                </div>
+                <div class="tool-title">買入時間表</div>
+                <div class="tool-desc">管理定期買入排程和股息公佈日期追蹤</div>
             </a>
             
             <a href="bond-compare.html" class="tool-card">
