--- a/guide.html
+++ b/guide.html
@@ -165,7 +165,11 @@
         </header>
 
         <div class="tools-grid">
-
+            <a href="dividendtrack.html" class="tool-card">
+                <div class="tool-icon">💰</div>
+                <div class="tool-title">投資收益追蹤儀表板</div>
+                <div class="tool-desc">即時追蹤股票、存款、債券收益，支援月度分析與派息月曆</div>
+            </a>
             <a href="buyinschedule.html" class="tool-card">
                 <div class="tool-icon">📅</div>
                 <div class="tool-title">買入時間表</div>
